fixed: Modal Style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="search_bar.js" defer></script>
     <script src="hero_card.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Galeria de Superheroes</title>
 </head>
 <body>
     <h1 style="text-align: center; margin-top: 20px;"> Galeria de Superhéroes</h1>
@@ -76,6 +76,5 @@
             imagen="img/super.webp">
         </hero-card>
     </div>
-    <hero-modal></hero-modal>
 </body>
 </html>
